<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TopFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/editTextPlaceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place_name_info"
            android:inputType="textCapSentences"
            android:minHeight="48dp"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/editTextLatitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:hint= "@string/latitude_from_map_click"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/longitude_from_map_click"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            android:textColor="@color/textColorPrimary"
            android:textColorHint="@color/textColorPrimary"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/tallenna" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:iconifiedByDefault="false"
            app:queryHint="Etsi tallennettu paikka..." />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/etsi" />

    </LinearLayout>

</FrameLayout>